# amplifier

./: .envrc  .gitignore  AGENTS.md  MIGRATING_FROM_v0.1.0.md  Makefile  README.md  cli-README.md  install.sh  pyproject.toml  v0.2.0-what-and-why.md
.ai/docs/: philosophy.md
.amp/: state.json
.amplifier/: README.md  config.yaml  settings.yaml
.claude/: settings.json
amplifier/: cli.py  directory_fetcher.py  directory_source.py  overlay.py
amplifier-app-cli/: pyproject.toml
amplifier-app-cli/amplifier_app_cli/: console.py  main.py  module_manager.py  paths.py  provider_loader.py  provider_manager.py  session_runner.py  session_spawner.py
amplifier-app-cli/tests/: test_auto_init.py  test_dead_code_removal.py  test_discover_providers_clean_install.py  test_ensure_raw_defaults.py  test_filter_tools.py  test_init_message.py  test_llm_error_display.py  test_provider_commands.py  test_provider_config_error_handling.py  test_provider_inheritance.py  test_session_spawner.py  test_source_status_auth.py  (+1 more)
amplifier-bundle-foundation/: bundle.md
amplifier-cli/: README.md  pyproject.toml
amplifier-foundation/: pyproject.toml
amplifier-lib/: README.md  pyproject.toml
amplifierd/: .gitignore  README.md  pyproject.toml
bundles/foundation/modules/hooks-deprecation/: pyproject.toml
directory/: README.md
docs/: 00_CORE_VERDICT.md  02_LIB_BUNDLE_SPLIT.md  03_CLI_MIGRATION.md  CONFIGURATION_MIGRATION.md  MODULES.md  WORKTREE_GUIDE.md  WORKTREE_VENV_MANAGEMENT.md
upstream/: .reconcile-head  README.md  adaptations.md  refactor-mappings.md  sources.md
(+472 files in other folders)
