[project]
name = "amplifier-module-hooks-deprecation"
version = "0.1.0"
description = "Reusable deprecation warning hook for deprecated bundles"
requires-python = ">=3.11"
# No dependencies - amplifier-core is available at runtime via the host environment
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-deprecation = "amplifier_module_hooks_deprecation:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_deprecation"]
